# diario-de-feira

./: .env-sample  .pre-commit-config.yaml  README.md  default_keywords.json  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cicd.yml  schedule.yml
diario/: __init__.py  keywords.py  main.py  meaning.py  twitter.py
diario_bot/: cli.py  main.py  twitter.py
diario_bot/apis/: maria_quiteria.py
test/: test_tweet.py
tests/: test_keywords.py  test_main.py  test_maria_quiteria.py  test_meaning.py  test_twitter.py
